2008-05-26  Jürg Billeter  <j@bitron.ch>

	* vapi/tiff.vapi: more fixes, patch by Christian Meyer

2008-05-25  Philip Van Hoof  <pvanhoof@gnome.org>

	* vala/valainterface.vala:
	* vala/Makefile.am:
	* vala/valaobjecttypesymbol.vala:
	* vala/valaclass.vala:
	* gobject/valaccodeinterfacebinding.vala:
	* gobject/valaccodeclassbinding.vala:
	* gobject/Makefile.am:
	* gobject/valaccodeobjecttypesymbolbinding.vala:

	Support interfaces for D-Bus services

2008-05-25  Jaap A. Haitsma  <jaap@haitsma.org>

	* vapi/hal.vapi: use [Compact] attribute for Hal.Context class.
	Fixes bug #534809

2008-05-25  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/: improve GstValue binding,
	patch by Jaap A. Haitsma, fixes bug 533805

	* vapi/gstreamer-0.10.vapi: regenerated

2008-05-25  Jürg Billeter  <j@bitron.ch>

	* vala/valaarraytype.vala:
	* vala/valapointertype.vala:
	* vala/valasemanticanalyzer.vala:

	Fix type resolving for arrays and pointers when declaring multiple
	variables in a single statement

2008-05-25  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: fix mktime binding

2008-05-25  Jürg Billeter  <j@bitron.ch>

	* vala/valaarraytype.vala:

	Fix type string for multi-dimensional arrays

2008-05-25  Jürg Billeter  <j@bitron.ch>

	* vapi/tiff.vapi: use [Compact] attribute and fix return types,
	patch by Christian Meyer

2008-05-25  Jürg Billeter  <j@bitron.ch>

	* vala/valaerrortype.vala: fix qualified error type string

2008-05-25  Jürg Billeter  <j@bitron.ch>

	* vala/valaarraytype.vala:
	* vala/valadatatype.vala:
	* vala/valadelegatetype.vala:
	* vala/valafieldprototype.vala:
	* vala/valainterfacewriter.vala:
	* vala/valamethodtype.vala:
	* vala/valapointertype.vala:
	* vala/valaunresolvedtype.vala:
	* vala/valavoidtype.vala:

	Write qualified types in the interface writer

2008-05-25  Jürg Billeter  <j@bitron.ch>

	* vapi/dbus-glib-1.vapi: use [Compact] attribute

2008-05-25  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala: