@@ -1,3 +1,8 @@
+2008-05-26  Jamie McCracken  <jamiemcc@gnome.org>
+
+	* vala/valgenieparser.vala: replaced foreach with for..in
+
+
 2008-05-26  Jürg Billeter  <j@bitron.ch>
 
 	* vapi/tiff.vapi: more fixes, patch by Christian Meyer
